Add staking rewarg payment endpoint
